# wave

./: .gitignore  Gopkg.toml  LICENSE  README.md  checkMonet.js  checksigners.js
asn1/: objects-lite.asn  objects.asn  objects.asn1  ref1.asn1  rtreepolicy.asn  rtreepolicy.asn1  wr1crypto.asn  wr1crypto.asn1
auditor/: config.toml  config2.toml  main.go
cli/: actions.go  main.go  utils.go
consts/: params.go
contracts/: alias.sol  registry.sol  simpleregistry.sol  swarm.sol
crypto/: Makefile.am  README.md  bench_test.go  configure.ac  ed25519-hash-custom.h  ed25519-lib  ed25519-prims.c  ed25519-prims.h  ed25519-randombytes-custom.h  ed25519.c  ed25519.go  ed25519.h  forthy42.patch  np  oaque.go
crypto/debian/: changelog  control
dot/: serdes.go  serdes_test.go
dot/objs/: dobject.go  dobject_gen.go  objects.go
eapi/: consts.go  eapi.go  eapi_rtree_test.go  eapi_state_test.go  eapi_test.go  httpserve.go  pbconversions.go
eapi/pb/: eapi.pb.go  eapi.pb.gw.go  eapi.proto  eapi.swagger.json  gen.go
engine/: background.go  cache.go  dcontext.go  engine_test.go  external.go  internals.go  main.go  ntrash.go  states.go  sync.go  trash.go  validate.go
entity/: eobject.go  eobject_gen.go  eobject_test.go  serdes.go
entity/objs/: eobject.go  eobject_gen.go
geth/: README.md  accountcmd.go  bugcmd.go  chaincmd.go  config.go  consolecmd.go  debug.go  main.go  misccmd.go  monitorcmd.go  usage.go
iapi/: attestation.go  attestation_test.go  bodyschemes.go  e2ee.go  e2ee_test.go  entity.go  entity_test.go  hashschemes.go  init.go  jedi.go  keypooldctx.go  keyringschemes.go  keyschemes.go  keyschemes_test.go  locationschemes.go  named.go  named_test.go  objects.go  policyscheme.go  pwrappers.go  revocationschemes.go  schemes.go  signatureschemes.go  singleton.go  storageinterface.go  verify.go  wr1partition.go  wr1partition_test.go  wsinterface.go
jedistore/: keystore.go
jediutils/: encoding.go
localdb/: interface.go
localdb/lls/: llstorage.go  llstorage_test.go
localdb/objs/: ldbobjs.go  ldbobjs_gen.go  ldbobjs_gen_test.go
localdb/partindex/: main.go
localdb/poc/: base.go  dot.go  dot_test.go  entity.go  entity_test.go  keys.go  keys_test.go  namedecl.go  namedecl_test.go  objs.go  objs_gen.go  objs_test.go
localdb/types/: interface.go  ninterface.go
olddot/: api.go
olddot/objs/: dobject_gen.go
oldentity/: out.mp
originalstorage/: alias.abi  alias.go  interface.go  registry.go  storage_test.go
paper_benchmarks/: main.go  main_test.go  main_util_test.go
params/: params.go
policy/: policy_interface.go
policyutils/rtree/: rtreebuilder.go
serdes/: attestation.go  common.go  e2ee.go  entity.go  entity_test.go  named.go  real_attest.txt  util.go  wr1.go
storage/: alias.abi  alias.go  contract.abi  contract_test.js  interface.go  rebuild.sh  registry.abi  registry.go  storage_test.go
storage/ipfs/: README.md  ipfs.go
storage/memoryserver/: main.go
tst/: main.go
utils/: cmd.go
waved/: configparse.go  wave.toml  waved.go
wve/: errors.go
(+51 files in other folders)
